--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,12 +16,14 @@ inactive-opacity = 0.9;
 
 opacity-rule = [ 
 	"100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'",
+	"100:class_g	= 'zen-alpha'",
 	"90:class_g	= 'Polybar'",
 	"90:class_g	= 'Rofi'",
+	"100:class_g	= 'mpv'"
 ];
 
 backend = "xrender";
-vsync = true;
+vsync = false;
 use-damage = false;
 unredir-if-possible = true;
 
