--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -28,7 +28,7 @@ padding-right = 2
 
 module-margin = 1
 
-font-0 = CaskaydiaCove Nerd Font;2
+font-0 = JetBrainsMono Nerd Font;2
 
 modules-left = bspwm
 modules-center = xwindow
