--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -19,7 +19,8 @@ opacity-rule = [
 	"100:class_g	= 'zen-alpha'",
 	"90:class_g	= 'Polybar'",
 	"90:class_g	= 'Rofi'",
-	"100:class_g	= 'mpv'"
+	"100:class_g	= 'mpv'",
+	"100:class_g	= 'Stremio'"
 ];
 
 backend = "xrender";
